<resources>
    <string name="app_name">Эрудит.Онлайн</string>
    <string name="dashboard_menu_label">Главная</string>
    <string name="competition_menu_label">Конкурсы</string>
    <string name="rating_menu_label">Рейтинг</string>
    <string name="profile_menu_label">Профиль</string>
    <string name="error_paging">Ошибка. Попробуйте обновить</string>
    <string name="error_retry">Обновить</string>
    <string name="error_auth_401">Что-то пошло не так. Необходимо авторизоваться повторно</string>
    <string name="error_no_network_title">Нет подключения к сети</string>
    <string name="error_no_network_description">Проверьте мобильное соединение или подключение Wi-Fi</string>
    <string name="error_something_wrong_title">Что-то пошло не так</string>
    <string name="error_something_wrong_description">Попробуйте обновить страницу</string>
    <string name="competition_items_title">Конкурсы</string>
    <string name="search_title">Поиск</string>
    <string name="filter_title">Фильтр</string>
    <string name="filter_apply_button_label">Применить</string>
    <string name="filter_ages_title">Возраст</string>
    <string name="filter_subjects_title">Предмет</string>
    <string name="competition_view_type_label">Отображение</string>
    <string name="difficulty">Сложность:</string>
    <string name="competition_ages_template">Возрастная категория: %s</string>
    <string name="competition_infos_title">Дополнительные материалы:</string>
    <string name="competition_run_test_title">Принять участие в конкурсе:</string>
    <string name="test_passage_answer_text_label">Введите ответ</string>
    <string name="test_passage_close_message">Вы действительно хотите прервать прохождение теста?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="test_temp_result_title">Конкурс пройден</string>
    <string name="rating_title">Рейтинг</string>
    <string name="rating_by_day_title">За день</string>
    <string name="rating_by_month_title">За месяц</string>
    <string name="rating_by_year_title">За год</string>
    <string name="rating_day_hint">День</string>
    <string name="rating_month_hint">Месяц</string>
    <string name="rating_year_hint">Год</string>
    <string name="rating_single_tab_title_template">Рейтинг %s</string>
    <string name="common_result_list_title">Итоги</string>
    <string name="search_result_by_email_hint">Введите email</string>
    <string name="search_result_by_email_help_text">Напишите полностью email адрес, который указывали при прохождении теста, и нажмите поиск</string>
    <string name="search_result_hint">Конкурс или предмет…</string>
    <string name="search_results_by_email_title">Поиск результатов по email</string>
    <string name="search_results_title">Поиск результатов</string>
    <string name="user_result_list_title">Результаты</string>
    <string name="user_result_place_label">Место:</string>
    <string name="user_result_score_label">Балл:</string>
    <string name="user_result_test_id_template">Тест %1$s</string>
    <string name="user_result_result_id_template">№ %1$d</string>
    <string name="score_template">%d из %d</string>
    <string name="login_title">Вход</string>
    <string name="login_email_hint">E-mail адрес</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_button_label">Войти</string>
    <string name="registration_title">Регистрация</string>
    <string name="restore_password_button_label">Забыли пароль?</string>
    <string name="button_auth_label">Авторизация</string>
    <string name="empty_default_error">Поле не может быть пустым</string>
    <string name="profile_login_button_label">Войти</string>
    <string name="profile_common_results_button_label">Итоги</string>
    <string name="profile_search_results_button_label">Найти результаты</string>
    <string name="profile_user_results_button_label">Мои результаты</string>
    <string name="select_country_title">Страна</string>
    <string name="select_diploma_title">Диплом</string>
    <string name="surname_hint">Фамилия</string>
    <string name="name_hint">Имя</string>
    <string name="patronymic_hint">Отчество</string>
    <string name="birthday_hint">Дата рождения</string>
    <string name="school_hint">Образовательно учреждение</string>
    <string name="city_hint">Населенный пункт</string>
    <string name="region_hint">Регион</string>
    <string name="country_hint">Страна</string>
    <string name="email_hint">E-mail адрес</string>
    <string name="password_hint">Пароль</string>
    <string name="password_confirm_hint">Подтверждение</string>
    <string name="registration_notifications_checkbox_text">Да, я хочу получать уведомления о новых конкурсах</string>
    <string name="registration_privacy_policy_checkbox_text_part_start">Нажимая кнопку «Зарегистрироваться», Вы даёте</string>
    <string name="temp_result_privacy_policy_checkbox_text_part_start">Нажимая кнопку «Сохранить результаты», Вы даёте</string>
    <string name="privacy_policy_checkbox_text_part_link">согласие на обработку персональных данных</string>
    <string name="privacy_policy_checkbox_text_part_end">в соответствии с Федеральным законом от 27 июля 2006 года № 152 «О персональных данных»</string>
    <string name="registration_button_label">Зарегистрироваться</string>
    <string name="sex_not_set">Не выбран</string>
    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="default_empty_error">Заполните обязательное поле</string>
    <string name="email_validation_error">Введите корректный e-mail</string>
    <string name="password_confirm_error">Пароли не совпадают</string>
    <string name="privacy_policy_error">Необходимо дать согласие на обработку персональных данных</string>
    <string name="password_min_length_error">Минимальная длина 8 символов</string>
    <string name="password_min_length_pattern">(.){8,}</string>
    <string name="email_confirm_title">Подтверждение адреса</string>
    <string name="confirm_email_description">На указанный Вами адрес электронной почты выслано письмо, содержащее ссылку, пройдя по которой Вы подтвердите регистрацию и сможете войти в личный кабинет.</string>
    <string name="confirm_email_deep_link_info">Перейти по ссылке вы можете как на сайт, так и в мобильное приложение.</string>
    <string name="confirm_email_button_ok_label">Хорошо</string>
    <string name="confirm_email_success_title">Почта подтверждена.</string>
    <string name="confirm_email_success_message">Теперь вы можете авторизоваться в приложении.</string>
    <string name="confirm_email_success_button_label">Авторизоваться</string>
    <string name="information_title">Информация</string>
    <string name="profile_information_button_label">Информация</string>
    <string name="temp_result_spent_time_template">Затрачено времени: %s</string>
    <string name="temp_result_average_score_template">Средний балл по всем участникам: %d%%</string>
    <string name="temp_result_answers_title">Ваши ответы</string>
    <string name="temp_result_save_message_warning">Для регистрации участия в конкурсе заполните данные участника и нажмите кнопку «Сохранить результат». Внимательно заполняйте все поля, так как указанные значения будут использоваться в итоговом протоколе и в наградных материалах.</string>
    <string name="username_hint">Фамилия Имя Отчество</string>
    <string name="position_hint">Должность (класс, курс, возраст)</string>
    <string name="teacher_hint">Руководитель</string>
    <string name="teacher_email_hint">E-mail руководителя</string>
    <string name="diploma_type_hint">Вид диплома</string>
    <string name="temp_result_review_title">Оцените, пожалуйста, конкурс</string>
    <string name="review_quality_title">Качество и понятность вопросов</string>
    <string name="review_difficulty_title">Сложность вопросов</string>
    <string name="review_interests_title">Насколько интересными были вопросы</string>
    <string name="save_result_button_label">Сохранить результаты</string>
    <string name="temp_result_score_label">Баллы</string>
    <string name="diploma_type_template">Вариант №%s</string>
    <string name="empty_answer">Нет ответа</string>
    <string name="success_save_result_title">Результат сохранен</string>
    <string name="success_save_result_email_search_message">Вы всегда можете найти свой результат по e-mail.</string>
    <string name="success_save_result_profile_message">Зарегистрированным участникам результаты доступны в личном кабинете.</string>
    <string name="success_save_result_button_competitions_label">Другие конкурсы</string>
    <string name="success_save_result_button_result_label">К результату</string>
    <string name="result_detail_title">Результат участника</string>
    <string name="result_username_label">Участник:</string>
    <string name="result_score_label">Результат (баллов):</string>
    <string name="result_spent_time">Затрачено времени:</string>
    <string name="result_date_label">Дата участия:</string>
    <string name="result_id_label">Идентификатор результата:</string>
    <string name="result_answers_block_title">Ответы участника</string>
    <string name="settings_title">Настройки</string>
    <string name="app_theme_label">Тема приложения</string>
    <string name="profile_settings_button_label">Настройки</string>
    <string name="change_theme_dialog_title">Изменение темы</string>
    <string name="change_theme_dialog_message">Новая тема применится после перезапуска приложения. Перезапустить сейчас?</string>
    <string name="reset_filters_label">Сбросить</string>
    <!-- ДЕБАГ -->
    <string name="debug_title">Дебаг</string>
    <string name="debug_release">PRODUCTION %s</string>
    <string name="debug_debug">DEVELOP %s</string>
    <string name="debug_custom">CUSTOM</string>
    <string name="endpoint_placeholder">http://localhost:8080/api/</string>
    <string name="endpoint_regex">^(http|https):\/\/([^\/:]+)(:[0-9]+)?[^:]+\/$</string>
    <string name="endpoint_error">Введите base url, оканчивающийся на /</string>
    <string name="debug_save">Сохранить</string>
    <string name="custom_endpoint_hint">API endpoint</string>
    <string name="server_env_title">Среда сервера</string>
    <string name="new_rank_label">New</string>
    <string name="search_label">Поиск</string>
    <string name="search_close_label">Закрыть поиск</string>
    <!-- ПУСТАЯ VIEW -->
    <string name="empty_default_title">Здесь пока ничего нет</string>
    <string name="empty_default_message">Но скоро обязательно появится</string>
    <string name="user_result_empty_title">Результаты не найдены</string>
    <string name="user_result_empty_comment">Попробуйте изменить запрос</string>
    <string name="competition_empty_title">Ничего не найдено</string>
    <string name="competition_empty_comment">Попробуйте изменить настройки фильтрации</string>
    <string name="app_update_message">Появилось обновление для приложения. Пожалуйста, установите новую версию.</string>
    <string name="app_update_label">Обновить приложение</string>
    <string name="test_passage_required_answer_error">Укажите ответ</string>
    <string name="result_correct_answer_template">Правильный ответ: %s</string>
    <string name="rating_empty_title">Результатов не найдено</string>
    <string name="rating_empty_comment">Пройдите конкурс, и будете первым</string>
    <string name="profile_title">Профиль</string>
    <string name="debug_compose_enabled_switch_label">Использовать compose</string>
</resources>