<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="?iconBack"
            app:title="@string/debug_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroupDebugServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonDebugRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_release" />

                <RadioButton
                    android:id="@+id/radioButtonDebugDebug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_debug" />

                <RadioButton
                    android:id="@+id/radioButtonDebugCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_custom" />

            </RadioGroup>

            <ru.eruditeonline.app.presentation.ui.views.ValidationTextInputLayout
                android:id="@+id/textInputLayoutCustomEndpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:hint="@string/endpoint_hint"
                android:visibility="gone"
                app:errorEmpty="@string/endpoint_error"
                app:errorMalformed="@string/endpoint_error"
                app:validationPattern="@string/endpoint_regex">

                <EditText
                    android:id="@+id/editTextCustomEndpoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ru.eruditeonline.app.presentation.ui.views.ValidationTextInputLayout>

            <ru.eruditeonline.app.presentation.ui.views.StatefulMaterialButton
                android:id="@+id/buttonDebugSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/debug_save" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
