<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            app:shapeAppearanceOverlay="@style/RoundedImageOverlay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="24dp"
            android:text="@string/profile_login_button_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegistration"
            style="@style/MaterialButtonStyle.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="8dp"
            android:text="@string/registration_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSearchResultsByEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="12dp"
            android:paddingHorizontal="@dimen/padding_16"
            android:paddingVertical="12dp"
            android:text="@string/profile_search_results_button_label"
            android:textAppearance="@style/Font.Body1.Regular"
            app:drawableStartCompat="@drawable/ic_search_results" />

        <TextView
            android:id="@+id/textViewCommonResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="12dp"
            android:paddingHorizontal="@dimen/padding_16"
            android:paddingVertical="12dp"
            android:text="@string/profile_common_results_button_label"
            android:textAppearance="@style/Font.Body1.Regular"
            app:drawableStartCompat="@drawable/ic_common_results" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="12dp"
            android:paddingHorizontal="@dimen/padding_16"
            android:paddingVertical="12dp"
            android:text="@string/profile_information_button_label"
            android:textAppearance="@style/Font.Body1.Regular"
            app:drawableStartCompat="@drawable/ic_info" />

    </LinearLayout>
</FrameLayout>