<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_16">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Font.Heading2.Bold"
        tools:text="«Сервисы Интернет»" />

    <TextView
        android:id="@+id/textViewAges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/Font.Body1.Regular"
        tools:text="Возрастная категория: 8-11 классы, студенты, учителя" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/difficulty"
            android:textAppearance="@style/Font.Body1.Regular" />

        <ImageView
            android:id="@+id/imageViewDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            tools:src="@drawable/ic_rating_1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/Font.Body2.Regular"
        tools:text="Международный онлайн-конкурс «Сервисы Интернет» с моментальным подведением итогов. Участникам предлагается ответить на 10-12 вопросов с вариантами ответов. Ограничение по времени не предусмотрено. Участие в конкурсе бесплатное, после подведения итогов можно заказать диплом для участника и грамоту для руководителя." />

    <TextView
        android:id="@+id/textViewStartTestLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/competition_run_test_title"
        android:textAppearance="@style/Font.Heading3.Medium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_competition_test_button" />

    <TextView
        android:id="@+id/textViewInfosTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/competition_infos_title"
        android:textAppearance="@style/Font.Heading3.Medium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="2"
        tools:listitem="@layout/item_competition_info" />
</LinearLayout>